--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "daisyui": "^2.15.3",
     "firebase": "^9.8.3",
     "react": "^18.1.0",
+    "react-countdown": "^2.3.2",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^6.3.0",
